# predict-mm-bot

./: .env.example  .gitignore  Dockerfile  README.md  config.example.toml  docker-compose.yml  install.sh  pyproject.toml
predict_mm/: __init__.py  client.py  config.py  diagnose.py  engine.py  logging.py  main.py  models.py  risk.py  setup_wizard.py  strategy.py  web.py
predict_mm/web_static/: app.js  index.html  styles.css
tests/: test_client.py  test_config.py  test_engine.py  test_risk.py  test_setup_wizard.py  test_strategy.py  test_web.py  test_web_static.py
