[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predict-mm-bot"
version = "0.1.0"
description = "Dry-run-first market making bot scaffold for Predict.fun style prediction markets."
requires-python = ">=3.11"
dependencies = [
  "predict-sdk>=0.0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["predict_mm*"]

[tool.ruff]
line-length = 100
target-version = "py311"
